--- a/style.css
+++ b/style.css
@@ -2,11 +2,6 @@
     margin-bottom: 100px;
 }
 
-.row{
-    height: 600px;
-    display: flex;
-}
-
 .orange-bg{
     background-color: #fceae8;
     border-radius: 10px;
@@ -26,4 +21,52 @@
     border: none;
     border-radius: 8px;
     padding: 9px 25px; 
+}
+
+.categories h1{
+    color: white;
+}
+
+.categories img{
+    width: 100px;
+}
+
+.watch-bg, .bag-bg, .shoes-bg{
+    padding: 10px 30px;
+    border-radius: 10px;
+}
+
+.watch-bg{
+    background: orange;
+}
+
+.bag-bg{
+    background: orchid;
+}
+
+.shoes-bg{
+    background: blue;
+}
+
+.card{
+    border: none;
+    box-shadow: 5px 5px 10px lightgrey;
+    border-radius: 10px;
+}
+
+.card-footer{
+    background-color: white;
+    border-top: none;
+}
+
+#subscribe{
+    height: 300px;
+}
+
+#subscribe h6{
+    color: gray;
+}
+
+footer{
+    text-align: center;
 }
